<resources>
    <string-array name="select">
        <item>강원</item>
        <item>경기</item>
        <item>경남</item>
        <item>경북</item>
        <item>광주</item>
        <item>대구</item>
        <item>대전</item>
        <item>부산</item>
        <item>서울</item>
        <item>세종</item>
        <item>울산</item>
        <item>인천</item>
        <item>전남</item>
        <item>전북</item>
        <item>제주</item>
        <item>충남</item>
        <item>충북</item>
    </string-array>
    <string-array name="tab_main">
        <item>홈</item>
        <item>헬스장검색</item>
        <item>다이어리</item>
        <item>켈린더</item>
        <item>마이페이지</item>
    </string-array>
    <string-array name="tab_search">
        <item>운동맛집</item>
        <item>관심맛집</item>
    </string-array>
    <string-array name="exercise_part">
        <item>가슴</item>
        <item>등</item>
        <item>어깨</item>
        <item>팔</item>
        <item>다리</item>
    </string-array>
    <string name="item_chest">가슴</string>
    <string name="item_back">등</string>
    <string name="item_shoulder">어깨</string>
    <string name="item_legs">다리</string>
    <string name="item_arm">팔</string>
    <string-array name="load_string">
        <item>오늘도 운동을 Flex!</item>
        <item>쇠는 놓지말자!</item>
        <item>덤벨잡는 너, 참 멋져!</item>
        <item>No pain, No gain!</item>
        <item>땀흘린자, 먹어라!</item>
        <item>운동인들을 위한 세상</item>
    </string-array>
    <string name="kakao_map_api_key">785b8c0fb5d7046009351ac6fe2fed8b</string>
    <string name="exercise_sort_accuracy">정확도순</string>
    <string name="exercise_sort_distance">거리순</string>
    <string name="app_update">Update 2020.04.29</string>
    <string name="app_name">Exercise\nRestaurant</string>
    <string name="app_version">v.1.1.1</string>
    <string name="common_ok">확인</string>
    <string name="common_no">취소</string>
    <string name="common_settings">설정</string>
    <string name="common_change">변경</string>
    <string name="common_delete">삭제</string>
    <string name="common_success">성공</string>
    <string name="common_fail">실패</string>
    <string name="common_next">다음</string>
    <string name="common_complete">완료</string>
    <string name="common_date">%s년 %s월 %s일</string>
    <string name="email">이메일</string>
    <string name="pass">비밀번호</string>
    <string name="log_out">로그아웃</string>
    <string name="common_save_no">저장할 수 없습니다.</string>
    <string name="common_save_ok">저장되었습니다.</string>
    <string name="common_delete_no">삭제할 수 없습니다.</string>
    <string name="common_delete_fail">삭제를 실패하였습니다..</string>
    <string name="common_delete_ok">삭제되었습니다.</string>
    <string name="common_update_ok">수정되었습니다.</string>
    <string name="common_update_fail">수정을 실패하였습니다.</string>
    <string name="common_no_denied">권한이 거부되었습니다.\n\n%s</string>
    <string name="common_have_trim">입력한 정보에 공백을 제거하세요.</string>
    <string name="common_context_error_message1">내용을 입력하세요.</string>
    <string name="common_context_error_message2">항목을 선택하세요.</string>
    <string name="common_context_error_message3">항목과 내용을 입력하세요.</string>
    <string name="common_exercise_no_input_kg_and_count_error_message">추가하려는 무게와 횟수를 입력하세요.</string>
    <string name="common_when_logout_not_save_records">로그아웃시에는 기록을 저장할 수 없습니다.</string>
    <string name="baseActivity_backPressed">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="common_ok_login_state_but_not_have_data">등록된 기록이 없습니다. \n많은 기록은 건강한 나를 만들수 있어요!</string>
    <string name="bookmark_state_no">즐겨찾기에 제거되었습니다.</string>
    <string name="bookmark_state_ok">즐겨찾기에 추가되었습니다.</string>
    <string name="bookmark_add_no_message">즐겨찾기에 추가를 실패하였습니다.</string>
    <string name="bookmark_delete_no_message">즐겨찾기에 제거를 실패하였습니다.</string>
    <string name="bookmark_state_no_login_message">즐겨찾기 기능은 로그인이 필요합니다.</string>
    <string name="tedPermission_setRationaleMessage"> 앱의 기능을 사용하기 위해서는 권한이 필요합니다.</string>
    <string name="tedPermission_setDeniedMessage">만약 권한을 다시 얻으려면,\n\n[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="loading_title">운동맛집</string>
    <string name="loading_gps_error_title">GPS 오류</string>
    <string name="loading_gps_error_message">GPS 상태를 활성상태로 변경후 다시 시작해 주세요.</string>
    <string name="noLoginMessage_title">알림</string>
    <string name="noLoginMessage_message">여러 기능을 사용하려면 로그인이 필요합니다. \n로그인 하시겠습니까?</string>
    <string name="home_hint">검색할 지역을 선택하세요!</string>
    <string name="home_this_locate_research">이 지역 재검색</string>
    <string name="home_remain_result">결과더보기</string>
    <string name="home_unRemain_result">더이상 검색할 수 없습니다.</string>
    <string name="home_no_result">새롭게 검색된 결과가 없습니다.</string>
    <string name="home_no_access">접근할 수 없습니다.</string>
    <string name="map_gps_on">GPS 활성화 되었습니다</string>
    <string name="map_gps_off">GPS 비활성화 되었습니다 \n 다시 활성화를 하세요.</string>
    <string name="map_gps_and_authorization_on">GPS 활성화, 권한이 허용되었습니다</string>
    <string name="search_hint">검색할 헬스장 이름을 입력하세요!</string>
    <string name="rank_main_context">주변맛집</string>
    <string name="rank_error_location">현재 위치의 정보를 가져올 수 없습니다.</string>
    <string name="rank_error_load_data">데이터를 가져올 수 없습니다.</string>
    <string name="rank_unRemain_result">더이상 결과가 없습니다.</string>
    <string name="bookmark_main_context">나의 맛집 취향은?!</string>
    <string name="bookmark_no_login"> 맛집을 추가하기 위해선 로그인이 필요합니다.</string>
    <string name="bookmark_no_item">관심있는 맛집을 추가해 보세요!</string>
    <string name="lookFor_hint">오늘은 어디에서?</string>
    <string name="lookFor_no_result">검색한 헬스장이 없습니다. 다시 한번 입력해주세요</string>
    <string name="noSearchMessage_title">검색 실패</string>
    <string name="noSearchMessage_message">다시 입력해 주세요.</string>
    <string name="myPage_identity">개인정보 처리방침</string>
    <string name="myPage_question">문의하기</string>
    <string name="myPage_notification">공지사항</string>
    <string name="myPage_withdraw">회원탈퇴</string>
    <string name="myPage_init_title">운동맛집 로그인</string>
    <string name="myPage_init_email_hint">이메일을 입력하세요.</string>
    <string name="myPage_init_pass_hint">비밀번호를 입력하세요.</string>
    <string name="myPage_register">회원가입하기</string>
    <string name="myPage_login_start">시작</string>
    <string name="myPage_find_pass">비밀번호 찾기</string>
    <string name="myPage_not_valid_email">형식에 맞는 이메일을 입력하세요.</string>
    <string name="myPage_not_input_email">이메일을 입력하세요.</string>
    <string name="myPage_not_input_pass">비밀번호를 입력하세요.</string>
    <string name="myPage_not_input_all">이메일과 비밀번호를 입력하세요.</string>
    <string name="myPage_login_state_nickname">%s 님 환영합니다!</string>
    <string name="myPage_login_fail">로그인에 실패하였습니다.</string>
    <string name="identify_content">\n\n\n본 개인정보처리방침의 목차는 아래와 같습니다. \n\n\n\n
        일부는 관계법령이 개인정보처리방침의 작성에 있어 요구하는 필수 사항을 포함하였고,\n\n\n
        나머지는 "운동맛집" 에서 자체적으로 이용자의 개인정보 보호에 있어 중요하다 판단하는 내용을 추가하였습니다. \n\n\n\n\n\n
        1.개인정보처리방침의 의의 \n\n\n
        2.수집하는 개인정보 (필수 안내사항) \n\n\n
        3.수집한 개인정보의 이용 (필수 안내사항) \n\n\n
        4.개인정보의 제공 및 위탁 (필수 안내사항)\n\n\n
        5.개인정보의 파기 (필수 안내사항) \n\n\n
        6.이용자 및 법정대리인의 권리와 행사 방법 \n(필수 안내사항)\n\n\n
        7.개인정보보호를 위한 "운동맛집" 의 노력 \n\n\n
        8.개인정보 보호책임자 및 담당자 안내 \n(필수 안내사항)\n\n\n
        9.본 개인정보처리방침의 적용 범위 \n\n\n
        10.개정 전 고지 의무\n\n\n\n\n\n
    </string>
    <string name="notification_main_context">공지사항</string>
    <string name="question_main_text1">어떤 점이 불편하셨나요?</string>
    <string name="question_main_text2">고객님께 불편을 드려 죄솝합니다. \n  고객님의 불편사항을 말씀해주시면, \n  더 나은 서비스를 제공할 수 있도록 \n  최대한 반영하겠습니다.</string>
    <string name="question_main_text3">불편 및 개선사항을 자유롭게 말씀해주세요. \n  (ex. 운동 목록을 더 추가해주세요.)</string>
    <string name="question_main_text4">의견 보내기</string>
    <string name="question_send_no">문의사항이 전달되지 않았습니다.</string>
    <string name="question_send_ok">문의사항이 전달되었습니다.</string>
    <string name="question_not_input">정확한 입력을 부탁드립니다!</string>
    <string name="withdrawal_no">회원탈퇴를 실패하였습니다.</string>
    <string name="withdrawal_ok_result">%s 님이 정상적으로 탈퇴 되었습니다.</string>
    <string name="withdrawal_question">회원탈퇴 하시겠어요?</string>
    <string name="withdrawal_explain">회원탈퇴시 회원님의 모든 정보가 사라집니다!</string>
    <string name="withdrawal_cancel">취소</string>
    <string name="withdrawal_ok">회원탈퇴</string>
    <string name="logout_question">로그아웃 하시겠어요?</string>
    <string name="logout_explain">로그아웃시 즐겨찾기가 저장되지 않아요!</string>
    <string name="logout_cancel">취소</string>
    <string name="logout_ok">로그아웃</string>
    <string name="logout_no">로그아웃을 실패하였습니다.</string>
    <string name="find_title">비밀번호 초기화</string>
    <string name="find_email">이메일</string>
    <string name="find_hint">변경할 이메일을 입력하세요</string>
    <string name="find_explain1">기존에 가입하신 이메일을 입력하시면</string>
    <string name="find_explain2">비밀번호 변경 메일을 발송해드립니다.</string>
    <string name="find_ok">요청</string>
    <string name="find_ok_message">등록된 메일에서 비밀번호 초기화 할 수 있습니다.</string>
    <string name="find_not_init_pass">비밀번호 초기화 실패</string>
    <string name="find_not_consist_email">등록된 이메일이 없습니다.</string>
    <string name="find_ok_title">전송완료!</string>
    <string name="find_ok_explain1">비밀번호 재설정 메일을</string>
    <string name="find_ok_explain2">보내드렸습니다.</string>
    <string name="register_title">운동맛집 회원가입</string>
    <string name="register_nickname">닉네임</string>
    <string name="register_email">이메일</string>
    <string name="register_pass">비밀번호</string>
    <string name="register_pass_ok">비번확인</string>
    <string name="register_ok">가입</string>
    <string name="register_nickname_hint">본명 권장</string>
    <string name="register_email_hint">로그인 시 필요</string>
    <string name="register_pass_hint">6자리 이상</string>
    <string name="register_pass_ok_hint">비밀번호 한번 더 입력</string>
    <string name="register_not_proper_nickname">닉네임이 적합하지 않습니다.</string>
    <string name="register_not_proper_email">이메일이 적합하지 않습니다.</string>
    <string name="register_not_proper_pass">6자리 이상 비밀번호를 입력하세요.</string>
    <string name="register_not_proper_passOk">동일한 비밀번호를 입력하세요.</string>
    <string name="register_not_verified_email">이메일 인증이 필요합니다.</string>
    <string name="register_not_enough">틀린부분을 확인하세요.</string>
    <string name="register_no">회원가입 실패</string>
    <string name="register_duplicate">이미 가입된 이메일입니다.\n다른 이메일을 입력해주세요.</string>
    <string name="register_not_verify">저장할 수 없는 이메일입니다.\n다른 이메일을 입력해주세요.</string>
    <string name="register_send_checkNum">입력한 이메일로 인증번호를 전송하였습니다.</string>
    <string name="register_checkNum_ok">인증에 성공하였습니다.</string>
    <string name="register_not_input_checkNum">인증번호를 입력하세요.</string>
    <string name="register_not_same_checkNum">인증번호가 일치하지 않습니다.</string>
    <string name="verified_email_user">duksung12@gmail.com</string>
    <string name="verified_email_pass">juzzwgiondjdoxsk</string>
    <string name="verified_email_title">운동맛집 이메일 인증번호</string>
    <string name="verified_email_content">인증번호는 %s 입니다.</string>
    <string name="register_email_verified_hint">메일에 전송된 인증번호를 입력하세요.</string>
    <string name="register_email_verified_main">인증번호</string>
    <string name="register_email_verified">인증</string>
    <string name="register_email_verified_ok">확인</string>
    <string name="register_ok_title">운동맛집 회원가입 완료!</string>
    <string name="register_ok_explain1">운동맛집과 함께</string>
    <string name="register_ok_explain2">건강한 하루를</string>
    <string name="register_ok_start">Start!</string>
    <string name="diary_login_state_no1">기록을 추가하기 위해선 로그인이 필요합니다.</string>
    <string name="add_eat_today">요일</string>
    <string name="add_eat_today_time">시간</string>
    <string name="add_eat_list">종류</string>
    <string name="add_eat_menu_meal">식사</string>
    <string name="add_eat_menu_snack">간식</string>
    <string name="add_eat_memo">메모</string>
    <string name="add_eat_cancel">취소</string>
    <string name="add_eat_save">저장</string>
    <string name="add_exercise_category">운동 추가</string>
    <string name="address_title">주소 설정</string>
    <string name="address_select1">광역시/도</string>
    <string name="address_select2">시/군/구</string>
    <string name="address_select3">읍/면/동</string>
</resources>