<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chest"
        android:icon="@drawable/ic_chest_foreground"
        android:title="@string/item_chest" />

    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_lets_foreground"
        android:title="@string/item_back" />

    <item
        android:id="@+id/shoulder"
        android:icon="@drawable/ic_shoulder_foreground"
        android:title="@string/item_shoulder" />

    <item
        android:id="@+id/legs"
        android:icon="@drawable/ic_legs_foreground"
        android:title="@string/item_legs" />

    <item
        android:id="@+id/arm"
        android:icon="@drawable/ic_arms_foreground"
        android:title="@string/item_arm" />

</menu>
