<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="100dp"
    android:paddingRight="20dp"
    android:paddingBottom="120dp"
    tools:ignore="SpUsage, NestedWeights, DisableBaselineAlignment">

    <LinearLayout
        android:id="@+id/ll_add_eat_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorWhite"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_add_eat_category"
            android:textSize="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:text="@string/add_eat_today" />

                <TextView
                    android:id="@+id/tv_add_eat_today"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:text="@string/add_eat_today_time" />

                <Button
                    android:id="@+id/btn_add_eat_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/add_eat_list" />

            <RadioGroup
                android:id="@+id/add_eat_radio_group"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:orientation="horizontal"
                android:weightSum="2">


                <RadioButton
                    android:id="@+id/rb_meal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_eat_menu_meal"
                    android:textSize="17dp" />


                <RadioButton
                    android:id="@+id/rb_snack"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_eat_menu_snack"
                    android:textSize="17dp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/add_eat_memo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:padding="10dp">

                <EditText
                    android:id="@+id/et_add_eat_memo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="@color/colorGrayBasic"
                    android:gravity="top"
                    android:padding="10dp"
                    android:textIsSelectable="false" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/add_eat_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_eat_cancel"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/add_eat_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_eat_save"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>