<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:ignore="NestedWeights,SpUsage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:weightSum="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logout_question"
                android:textColor="@color/colorBlack"
                android:textSize="38dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logout_explain"
                android:textColor="@color/colorGray"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_logout_cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/button_round"
                    android:text="@string/logout_cancel"
                    android:textSize="25dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_logout_ok"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_logout"
                    android:text="@string/logout_ok"
                    android:textColor="@color/colorWhite"
                    android:textSize="25dp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>


