<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:ignore="SpUsage,NestedWeights,ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register_ok_title"
                android:textColor="@color/colorBlue"
                android:textSize="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="50">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11"
                android:src="@drawable/sholder" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:src="@drawable/legs" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="8"
                android:src="@drawable/arms" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="10"
                android:src="@drawable/chest" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="9"
                android:src="@drawable/lets" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_ok_explain1"
                android:textSize="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_ok_explain2"
                android:textSize="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center">


            <Button
                android:id="@+id/btn_register_ok"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/register_ok_start"
                android:textSize="40dp"
                />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>