<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/address_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:ignore="SpUsage,ContentDescription,NestedWeights,UselessParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ib_home_address_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/address_title"
            android:textSize="35dp"
            app:layout_constraintBottom_toBottomOf="@id/ib_home_address_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_address1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorGrayDark"
            android:gravity="center"
            android:text="@string/address_select1"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.33" />


        <TextView
            android:id="@+id/tv_address2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorGrayDark"
            android:gravity="center"
            android:text="@string/address_select2"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toEndOf="@id/tv_address1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.34" />

        <TextView
            android:id="@+id/tv_address3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorGrayDark"
            android:gravity="center"
            android:text="@string/address_select3"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toEndOf="@id/tv_address2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.33" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_address"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>